--- a/style.css
+++ b/style.css
@@ -450,6 +450,7 @@ html {
     display: inline-block;
     border: 10px solid rgba(30, 30, 30, 0.75);
     border-radius: 7.5%;
+    position: relative;
 }
 
 #content .blog:hover {
