--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
 
 html {
     scroll-behavior: smooth;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+html::-webkit-scrollbar {
+    display: none;
 }
 
 /*---------------------------------------------------------------------------------------------*/
@@ -457,7 +462,7 @@ html {
     #header #logo {
         left: calc(50vw - 4vh);
     }
-
+    
     /*-----------------------------------------------------------------------------------------*/
     
     @keyframes sideBarInactiveMobile {
