--- a/style.css
+++ b/style.css
@@ -77,12 +77,11 @@ html::-webkit-scrollbar {
 }
 
 #header #darkModeToggle {
-    padding: 1vh;
+    margin: 1vh;
     position: fixed;
-    top: 1vh;
     right: 2vw;
     width: auto;
-    height: 6vh;
+    height: 8vh;
     cursor: pointer;
     border-radius: 4vh;
     background-color: rgba(255, 255, 255, 0);
