--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html::-webkit-scrollbar {
 
 #header {
     width: max(100%, 100vw);
+    width: 100%;
     height: 10vh;
     background-color: navy;
     position: fixed;
@@ -351,9 +352,13 @@ html::-webkit-scrollbar {
 
 #content #images img {
     min-width: max(10vw, 250px);
-    min-height: max(10vw, 250px);
+    min-width: 10vw;
+    min-height: max(8vw, 200px);
+    min-height: 8vw;
     max-width: max(33vw, 400px);
+    max-width: 33vw;
     max-height: max(25vw, 300px);
+    max-height: 25vw;
     margin: 4vh 2vw;
     height: auto;
 }
@@ -428,7 +433,9 @@ html::-webkit-scrollbar {
     margin: 3vh 2vw;
     padding: 0px 1.5vw;
     width: max(27vw, 330px);
+    width: 27vw;
     height: max(55vh, 550px);
+    width: 55vh;
     display: inline-block;
     border: 10px solid rgba(30, 30, 30, 0.75);
     border-radius: 7.5%;
@@ -441,10 +448,12 @@ html::-webkit-scrollbar {
 
 #content .blog .blogTitle {
     font-size: max(3vh, 30px);
+    font-size: 3vh;
 }
 
 #content .blogImg {
     width: max(23vw, 275px);
+    width: 23vw;
     height: auto;
 }
 
